<resources>
    <string name="app_name">SMS</string>
    <string name="app_name_full">Service Management Student</string>

    <!-- Inicio de Sesion-->
    <!-- Login -->
    <string name="ht_email">Email</string>
    <string name="ht_pwd">Contraseña</string>
    <string name="btnResetPwd">¿Has olvidado la contraseña?</string>
    <string name="btnLogin">Iniciar Sesion</string>
    <string name="btnRegister">Registrar</string>
    <string name="fields_error">No puede dejar los campos vacios</string>
    <string name="creds_invalidas">Las credenciales son invalidas</string>
    <string name="request_error">Ha ocurrido un error en la request</string>
    <string name="error_db">Ha ocurrido un error al guardar los datos</string>

    <!-- Registro -->
    <string name="ht_nombre">Nombre</string>
    <string name="ht_apellidos">Apellidos</string>
    <string name="ht_matricula">Matricula de Empleado</string>
    <string name="btnRegresar">Regresar</string>
    <string name="error_usr_duplicate">El usuario ya existe</string>

    <!-- Navigation Bar -->
    <string name="nb_home">Inicio</string>
    <string name="nb_estadisticas">Estadisticas</string>
    <string name="nb_info">Informacion</string>


    <!-- Pagina principal -->
    <string name="tab_name_inicio">Inicio</string>
    <string name="lblAsignaturas">Asignaturas</string>
    <string name="lblGrupos">Grupos</string>
    <string name="lblAlumnos">Alumnos</string>
    <string name="lblUser">Perfil</string>
    <string name="err_asignatura">No se ha encontrado ninguna asignatura</string>
    <string name="err_grupo">No se ha encontrado ningun grupo</string>
    <string name="err_alumnos">No se ha encontrado ningun alumno</string>
    <string name="add_Asignatura">Añadir/Editar Asignatura</string>
    <string name="add_Grupo">Añadir/Editar Grupo</string>
    <string name="add_Alumno">Añadir/Editar Alumno</string>


    <!-- Perfil de usuario -->
    <string name="tab_name_perfil">Perfil</string>
    <string name="holder_pwd">Una Simple Contraseña</string>
    <string name="change_pwd">Cambiar contraseña</string>
    <string name="save">Guardar Cambios</string>


    <!-- Cuadros de dialogo  -->
    <string name="header_error">¡Error!</string>
    <string name="body_error">Ha ocurrido un error al cargar los datos</string>
    <string name="cancelar">Cancelar</string>
    <string name="logout">Cerrar sesion</string>
    <string name="header_warning">¡Advertencia!</string>
    <string name="warning_del_grupo">¿Esta seguro de querer eliminar al grupo %s de la asignatura %s?</string>
    <string name="warning_del_asignatura">¿Esta seguro de querer eliminar la asignatura %s?</string>
    <string name="warn_update_asign">¿Esta seguro de querer actualizar los datos?</string>
    <string name="header_correcto">¡Actualizacion correcta!</string>
    <string name="content_correcto">Los datos se han actualizado de forma correcta</string>

    <!-- Notificacion de Red -->
    <string name="use_data">Usted está utilizando red de datos</string>
    <string name="no_Net">Usted no está conectado a la red</string>
    <string name="reintentar">Reintentar</string>
    <string name="aceptar">Aceptar</string>


    <!-- Añadir/Editar Asignaturas -->
    <string name="barTitle">Añadir/Editar %s</string>
    <string name="add_holder">Añadir %s</string>
    <string name="edit_holder">Editar %s</string>
    <string name="btnSeleccionar">Seleccionar</string>
    <string name="ht_nombre_asig">Nombre de Asignatura</string>
    <string name="ht_cod_asig">Codigo de Asignatura</string>
    <string name="btnEliminar_Grupo">Eliminar \n Grupo/s</string>
    <string name="lblEliminar_Grupo">Eliminar Grupo/s</string>
    <string name="btnEliminar_Asignatura">Eliminar Asignatura</string>
    <string name="btnSave">Guardar</string>
    <string name="err_Add_Edit_Asignatura">Por favor ingrese la informacion solicitada</string>
    <string name="warning_notSel_Asignatura">Debe seleccionar una asignatura para poder eliminar un grupo</string>
    <string name="warning_notSel_Grupo">Por favor seleccione un grupo para eliminar</string>
    <string name="warning_notSel_Asignatura_Del">Por favor seleccione una asignatura para eliminar</string>
    <string name="lblGrupos_Asignatura">Grupos de la asignatura</string>
    <string name="lblGrupos_General">Añadir grupo/s</string>
    <string name="lblAsignaturas_Online">Asignaturas en la nube</string>
    <string name="title_activity_add__edit__grupos">Add_Edit_Grupos</string>


    <!-- Añadir/Editar Grupos -->
    <string name="ht_nombre_grupo">Nombre de Grupo</string>
    <string name="lblAlumnos_Grupo">Alumnos inscritos</string>
    <string name="lblCriterios_Grupo">Editar criterios del grupo</string>
    <string name="lblAlumnos_Nube">Alumnos en la nube</string>
    <string name="btnDelete_Grupo">Eliminar \n Grupo</string>
    <string name="btnDelete_Alumnos">Eliminar \n alumno/s</string>
    <string name="lblNo_alumnos">No se ha encontrado ningun alumno</string>
    <string name="btnAdd_To_Asign">Agregar a   asignatura</string>
    <string name="asign_to_add_grupo">Añadir grupo a la asignatura:</string>
    <string name="warn_nombre_grupo">Por favor introduzca un nombre de grupo</string>

    <!-- Añadir/Editar Alumnos -->
    <string name="lblSelect_alumno">Seleccionar Alumno</string>
    <string name="ht_matricula_alumno">Matricula Alumno</string>
    <string name="lblInscrito_grupos">Inscrito en los grupos</string>
    <string name="ht_nombre_alumno">Nombre Alumno</string>
    <string name="ht_apellidos_alumno">Apellidos</string>

    <!--  Informacion  -->
    <string name="lblSMS">
        SMS (Service Management Student) es un servicio back-end y front-end
        que esta enfocado hacia la ayuda de docentes.\n\n
        SMS lleva el control de calificaciones por alumno,
        un generador de estadisticas y un control de las materias que imparte el docente.
    </string>
    <string name="lblDevelop_Team">Equipo de desarrollo</string>
    <string name="lblNombre_Rodrigo">Alvarez Pérez Rodrigo</string>
    <string name="lblNombre_Akari">Balderas Aguilera Brenda Akari</string>
    <string name="lblNombre_Uriel">Perez Cubias Uriel</string>
    <string name="lblsms_explicacion">¿Qué es SMS?</string>
    <string name="tabInfo_Title">Informacion de la aplicacion</string>

    <!-- Estadisticas -->
    <string name="title_activity_Estadisticas">Estadisticas</string>
    <string name="btnCerrar">Cerrar</string>
    <string name="txtParcial_Editar">Parcial a editar:</string>
    <string name="rbPrimerParcial">Primer Parcial</string>
    <string name="rbSegundo_Parcial">Segundo Parcial</string>
    <string name="rbTercerParcial">Tercer Parcial</string>
    <string name="lblActividades_Criterios">Actividades:</string>

    <!-- Editar Criterios -->
    <string name="btnAdd_Actividad">Añadir \nactividad</string>
    <string name="btnActividad">Actividad: %s</string>
    <string name="lblNombreActividad">Actividad:</string>
    <string name="lblValorActividad">Valor:</string>
    <string name="ht_Nombre_Actividad">Nombre de la actividad</string>
    <string name="ht_Valor_Actividad">Valor de la actividad</string>
    <string-array name="parciales">
        <item>Primer Parcial</item>
        <item>Segundo Parcial</item>
        <item>Tercer Parcial</item>
    </string-array>


    <string name="lblNombre_Actividad">%s</string>
    <string name="lblParcial">Parcial:</string>
    <string name="lblPromParc">Promedio \ndel parcial: %s</string>
    <string name="lblPromGeneral">Promedio \ngeneral: %s</string>
    <string name="lblPromedio">Promedio</string>
    <string name="lblPorcentaje">Porcentaje</string>
    <string name="lblSoporte">Correo de soporte tecnico:\n rodrigoalvarez449@gmail.com</string>
    <string-array name="calificaciones">
        <item>NP</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

</resources>
