<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblParcial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/lblParcial"
        android:textAlignment="center"
        android:textColor="@color/indigo_material"
        android:textSize="22sp" />

    <RadioGroup
        android:id="@+id/rgParciales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:checkedButton="@id/rbPrimer"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbPrimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:buttonTint="#FF5722"
            android:text="@string/rbPrimerParcial"
            android:textAlignment="textStart"
            android:textColor="@color/indigo_material"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbSegundo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:buttonTint="#FF5722"
            android:text="@string/rbSegundo_Parcial"
            android:textAlignment="textStart"
            android:textColor="@color/indigo_material"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbTercer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:buttonTint="#FF5722"
            android:text="@string/rbTercerParcial"
            android:textAlignment="textStart"
            android:textColor="@color/indigo_material"
            android:textSize="16sp" />
    </RadioGroup>

    <ListView
        android:id="@+id/lstCalificaciones"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:layout_weight="9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnClose_Calificaciones"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/red_round_button"
            android:text="@string/btnCerrar"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSave_Calificaciones"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/green_round_button"
            android:text="@string/btnSave"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>