<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnActividad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/purple_round_button"
        android:text="@string/btnActividad"
        android:textAlignment="center"
        android:textColor="@color/indigo_material"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/layActivity_Info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblNombreActividad"
                android:textAlignment="center"
                android:textColor="@color/purple_material"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etNombre_Actividad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/ht_Nombre_Actividad"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblValorActividad"
                android:textAlignment="center"
                android:textColor="@color/purple_material"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etValor_Actividad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/ht_Valor_Actividad"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtParcial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblParcial"
                android:textAlignment="center"
                android:textColor="@color/purple_material"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spParcial"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_weight="2"
                android:entries="@array/parciales"
                android:textAlignment="center" />


        </LinearLayout>

        <ImageButton
            android:id="@+id/imgbDelete"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:background="@color/transparent"
            app:srcCompat="@drawable/delete" />
    </LinearLayout>


</LinearLayout>