<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/ToolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spAsignaturas_Edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="2" />

        <Button
            android:id="@+id/btnSelect_Edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/orange_round_button"
            android:fontFamily="@font/andika"
            android:text="@string/btnSeleccionar"
            android:textColor="@color/blue_material"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:id="@+id/div"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_margin="10dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgAsig_Edit"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:srcCompat="@drawable/materia_holder" />

        <EditText
            android:id="@+id/etAsig_Edit_Cod"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/ht_cod_asig"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/indigo_material" />
    </LinearLayout>

    <EditText
        android:id="@+id/etAsig_Edit_Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/ht_nombre_asig"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/indigo_material" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spGrupos_Edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="2" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnEliminarGrupo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/red_round_button"
            android:text="@string/btnEliminar_Grupo"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="12dp"
        android:background="@drawable/green_round_button"
        android:text="@string/btnSave"
        android:textAlignment="center"
        android:textColor="@color/blue_light_material"
        android:textSize="18sp" />

</LinearLayout>