<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/ToolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppBarLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/lblSelect_alumno"
            android:textColor="@color/indigo_material"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spAlumnos_Edit"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_margin="8dp" />

        <View
            android:id="@+id/div"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_margin="10dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgAlumno_Edit"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:srcCompat="@drawable/profile_holder" />

            <EditText
                android:id="@+id/etMatricula_Alumno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ht_matricula_alumno"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/indigo_material" />
        </LinearLayout>

        <EditText
            android:id="@+id/etNombre_Alumno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/ht_nombre_alumno"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/indigo_material" />

        <EditText
            android:id="@+id/etApellidos_Alumno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/ht_apellidos_alumno"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/indigo_material" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <Button
            android:id="@+id/btnGuardar_Alumno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:background="@drawable/green_round_button"
            android:text="@string/btnSave"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>